<resources>
    <string name="app_name">LostChildren</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Fadwa-->
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone Number</string>
    <string name="image">Image</string>
    <string name="new_member">New Member?</string>
    <string name="already_member">Already a Member?</string>
    <string name="wrong_signin_data">Wrong Email or Password</string>
    <string name="duplicated_email">Duplicated email address</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password_confirmation">Password confirmation doesn\'t match Password</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="short_password">Password should be at least 6 characters</string>
    <string name="contains_spaces">&#160;shouldn\'t contain spaces</string>
    <string name="is_required">&#160;is required</string>
    <string name="letters_only">&#160;should contain letters only</string>
    <string name="is_too_long">&#160;is too long</string>

    <!--NavigationDrawer-->
    <string name="home">Home</string>
    <string name="report_lost">Report Lost Child</string>
    <string name="report_found">Report Found Child</string>
    <string name="search_children">Search Children</string>
    <string name="profile">Profile</string>
    <string name="logout">Log Out</string>

    <!--Shaimaa-->
    <string name="mname">Mother Name</string>
    <string name="age">Age</string>
    <string name="reporter_phone">Reporter\'s phone Number</string>
    <string name="invalid_age">Invalid age, it should be a number greater than 0 </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Ahmed-->
    <string name="fromAge">From</string>
    <string name="ToAge">To</string>


    <!--Islam-->
</resources>

