<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/reportLost"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/report_lost" />
        <item
            android:id="@+id/reportFound"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/report_found" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/search_children" />
    </group>

    <item android:title="User Information">
        <menu>
            <item
                android:id="@+id/profile"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/profile" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
