<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_signup_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyAppTheme.TextInputLayout"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@+id/edtPassword"
                    android:layout_alignStart="@+id/edtPassword"
                    android:ems="10"
                    android:hint="@string/fname"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_signup_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyAppTheme.TextInputLayout"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@+id/edtPassword"
                    android:layout_alignStart="@+id/edtPassword"
                    android:ems="10"
                    android:hint="@string/lname"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyAppTheme.TextInputLayout"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@+id/edtPassword"
                    android:layout_alignStart="@+id/edtPassword"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyAppTheme.TextInputLayout"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_signup_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyAppTheme.TextInputLayout"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/txt_signup_address"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:errorTextAppearance="@style/MyAppTheme.TextInputLayout"-->
                <!--app:errorEnabled="true">-->

                <!--<EditText-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_alignLeft="@+id/edtPassword"-->
                    <!--android:layout_alignStart="@+id/edtPassword"-->
                    <!--android:ems="10"-->
                    <!--android:hint="@string/address"-->
                    <!--android:inputType="text" />-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <AutoCompleteTextView
                android:id="@+id/addressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter location here"
                android:paddingLeft="5dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_signup_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyAppTheme.TextInputLayout"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@+id/edtPassword"
                    android:layout_alignStart="@+id/edtPassword"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="text|number" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image"/>



            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:text="@string/sign_up"
                android:textAllCaps="false" />


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:text="@string/already_member" />

            <Button
                android:id="@+id/btn_goToSignIn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="@android:color/white"
                android:text="@string/sign_in"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>